# Zenith-MCP

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Developer_Documentation.md  README.md  REFACTOR_PROMPT.md  Zenith-AI.md  bm25.py  generate-gate-tests.js  index.js  index.js.bak  lib.js  manifest.json  node_modules  nohup.out  package-lock.json  package.json  path-validation.js  pnpm-lock.yaml  pnpm-workspace.yaml  sagerank-ast-test.js  shared.js  tree-sitter.js  tsconfig.json  turbo.json
.chunk/: config.json
.circleci/: config.yml
.claude/: settings.json
.codex/: hooks.json
.github/: dependabot.yml
.polaris-gate/: audit-baseline-28e3a77.json  audit-baseline-46b341f.json  audit-baseline-current.json  audit-baseline-da240f5.json  verify-lane.mjs
docs/: ARCHITECTURE.md  BREAKING_ISSUES.md  CONFIGURATION.md  Developers-Guide.md  KNOWN-ISSUES-LANE-INTEL.md  KNOWN-ISSUES-LANE-STORE.md  LANE-NOTES-INTEL.md  LANE-NOTES-STORE.md  POLARIS-DUAL-LEAD-PLAN.md  POLARIS-KNOWN-ISSUES-2026-07-15.md  POLARIS-NEW-FINDINGS-2026-07-16.md  Road_To_AST_Awareness.md  Road_To_AST_Awareness_v2.md  Road_To_AST_Awareness_v3.md  SESSION-HANDOFF-2026-07-14.md  SESSION-HANDOFF-2026-07-15.md  SYSTEM-MAP.md  TOOL-AUTHORING-GUIDE.md  bug.md  pr13-all-comments.md  project-context-detection-methods.md  project-scoping-fix-plan.md  ref-compression-structure.ts  research-cross-file-resolution.xml  road-to-ast-awareness-wave-orchestration.md  search-tools-current-behavior.md  (+2 more)
toon/: ARCHITECTURE.md  README.md  pyproject.toml
toon/engines/: __init__.py  sagerank.py
toon/toon/: __init__.py  _utils.py  budget.py  config.py  dedup.py  encoder.py  pipeline.py  presets.py  router.py  string_codec.py
(+307 files in other folders)
